wier/force-app/main/default/objects/Invoice__c/fields/Amco_Weir_Reference__c.field-meta.xml
<CustomField>
    <fullName>Amco_Weir_Reference__c</fullName>
    <label>Amco Weir Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>