wier/force-app/main/default/objects/Invoice__c/fields/Customer_Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Names__c</fullName>
    <label>Customer Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>