wier/force-app/main/default/objects/Invoice__c/fields/Customer_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Customer_Numbers__c</fullName>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>