wier/force-app/main/default/objects/Invoice__c/fields/Customer_VAT_Registration_Num__c.field-meta.xml
<CustomField>
    <fullName>Customer_VAT_Registration_Num__c</fullName>
    <label>Customer VAT Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>