wier/force-app/main/default/objects/Invoice__c/fields/Deliver_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Country__c</fullName>
    <label>Deliver To Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>