wier/force-app/main/default/objects/Invoice__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>