wier/force-app/main/default/objects/Invoice__c/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>