wier/force-app/main/default/objects/Invoice__c/fields/Invoice_To_Address_Line_01__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Address_Line_01__c</fullName>
    <label>Invoice To Address Line 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>