wier/force-app/main/default/objects/Invoice__c/fields/Invoice_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Country__c</fullName>
    <label>Invoice To Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>