wier/force-app/main/default/objects/Invoice__c/fields/Invoice_To_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Zip_Postal_Code__c</fullName>
    <label>Invoice To Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>