wier/force-app/main/default/objects/Invoice__c/fields/Net_Invoice_Values__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Values__c</fullName>
    <label>Net Invoice Values</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>