wier/force-app/main/default/objects/Invoice__c/fields/TOTAL_INVOICE_VALUE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_INVOICE_VALUE__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL INVOICE VALUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>