wier/force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Values__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Values__c</fullName>
    <label>Total Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>