wier/force-app/main/default/objects/Invoice__c/fields/Vat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vat_Amount__c</fullName>
    <label>Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>