wier/force-app/main/default/objects/Invoice__c/fields/VAT_Amount_in_SARs__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_in_SARs__c</fullName>
    <label>VAT Amount in SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>