wier/force-app/main/default/objects/Invoice__c/fields/VAT_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Base_Amount__c</fullName>
    <label>VAT Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>