wier/force-app/main/default/objects/Invoice__c/fields/Weir_Contact_Persons__c.field-meta.xml
<CustomField>
    <fullName>Weir_Contact_Persons__c</fullName>
    <label>Weir Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>