wier/force-app/main/default/objects/Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Amco_Weir_Reference__c</columns>
    <columns>Customer_Reference__c</columns>
    <columns>Customer_VAT_Registration_Num__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>